# libpython-clj-trial

./: .gitignore  CHANGELOG.md  README.md  build.clj  deps.edn  pom.xml  pyproject.toml
dev/src/: dev.clj
doc/: intro.md
src/lagenorhynque/: libpython_clj_trial.clj
src/lagenorhynque/notebook_dai2/: 2_2_python.clj
test/lagenorhynque/: libpython_clj_trial_test.clj
